--- a/style.css
+++ b/style.css
@@ -1,3 +1,50 @@
+
+      body{
+        background-color:black;
+      }
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+
+      /*this is used inside to give the image padding*/
+
+
+  .jumbotron{
+
+
+
+    padding-top:40px;
+    padding-bottom:40px;
+    padding-right:40px;
+    padding-left:40px;
+
+  }
+
+  .jumbotroncolor{
+    background-color:#88B5F8;
+  }
+
+
+
+  .headingbox{
+    background-color:#457b9d;
+  }
+
+  .one{
+    border-radius: 21px 21px
+  }
+
 .container {
   max-width: 960px;
 }
